src/test/deca/syntax/invalid/created/bloc_alone/class_alone.deca
// Description:
//      Bloc class sans identifier
// Resultats:
//      Error syntaxe Ligne 6 : missing IDENT at '{'

class {}